44) kernel: ralink_wifi: mt76x3: driver update to 4.1.0.0 pre version.<br>
45) kernel: ralink_wifi: mt76x3: fix build warnings.<br>
46) kernel: ralink_wifi: mt76x3: fix ate build and work.<br>
47) kernel: ralink_wifi: mt76x3: port auto handover logic (basic roaming).<br>
48) kernel: ralink_wifi: mt76x3: port spectrum fixes.<br>
49) kernel: ralink_wifi: mt76x3: allow some getinfo from iwpriv without DBG build flag.<br>
50) kernel: ralink_wifi: mt76x3: allow log connect/disconnect and others info.<br>
51) kernel: compiler-gcc: disable -ftracer for __noclone functions.<br>
52) kernel: mm: fix page_group_by_mobility_disabled breakage.<br>
53) kernel: ext4: fix NULL pointer dereference in ext4_mark_inode_dirty().<br>
54) kernel: bio: return EINTR if copying to user space got interrupted.<br>
55) kernel: fs/exec.c: fix minor memory leak.<br>
56) kernel: usb: option: add D-Link DWM-221 B1 device id.<br>
57) kernel: usb: cdc_mbim: apply NDP to end quirk to all Huawei devices.<br>
58) kernel: usb: cdc-acm: more sanity checking.<br>
59) kernel: net: ipv6: count in extension headers in skb->network_header.<br>
60) kernel: net: xfrm: fix crash observed during device unregistration and decryption.<br>
61) kernel: net: ethtool: fix phy adress get from user.<br>
62) kernel: net: ethtool: issue with querying phy settings.<br>
63) kernel: net: fix net_gso_ok for new GSO types.<br>
64) kernel: net: netfilter: x_tables: fix unconditional helper.<br>
65) kernel: net: netfilter: x_tables: make sure e->next_offset covers remaining blob size.<br>
66) kernel: net: validate variable length ll headers.<br>
67) kernel: net: make *sfhash and real small functions in conntrack always inline (small optimize).<br>
68) kernel: net: fq_codel: explicitly reset flows in ->reset().<br>
69) kernel: net: ppp: take reference on channels netns.<br>
70) kernel: net: bridge: fix old ioctl unlocked net device walk.<br>
71) kernel: net: bridge: fix igmp / mld query parsing.<br>
<br>
<br>
<br>